dev/deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: afstemning-redis
  namespace: afstemningdev
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          resources:
            limits:
              memory: "100Mi"
              cpu: "100m"
            requests:
              memory: "50Mi"
              cpu: "50m"
          ports:
            - containerPort: 6379
              name: redis
              protocol: TCP
