dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: afstemning
  namespace: afstemningdev
  labels:
    app: afstemning
spec:
  replicas: 3
  selector:
    matchLabels:
      app: afstemning
  template:
    metadata:
      labels:
        app: afstemning
    spec:
      containers: 
        - name: afstemning
          image: simcax/afstemning:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 30001
              name: flask
              protocol: TCP
          volumeMounts:
            - name: cockroachdb-ssl-cert-volume
              mountPath: "/etc/cockroachdb-ssl-cert"
              readOnly: true
          resources:
            limits:
              memory: "200Mi"
              cpu: "200m"
            requests:
              memory: "100Mi"
              cpu: "100m"
      volumes:
        - name: cockroachdb-ssl-cert-volume
          secret:
            secretName: cockroach-ssl-cert
      imagePullSecrets:
      - name: regcred
