dev/service-redis.yaml
apiVersion: v1
kind: Service
metadata: 
  name: redis
  namespace: afstemningdev
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
