dev/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: afstemning
  namespace: afstemningdev
  labels:
    app: afstemning
spec:
  type: NodePort
  ports:
    - port: 30001
      targetPort: 8000
      nodePort: 30001
  selector:
    app: afstemning
